[gd_scene load_steps=15 format=3 uid="uid://bwgtrk8je4es6"]

[ext_resource type="Texture2D" uid="uid://5kqohbxd501y" path="res://assets/images/Background Empty.png" id="1_m1q0p"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_ov5sp"]
[ext_resource type="Script" path="res://scenes/Player.cs" id="3_amex5"]
[ext_resource type="Script" path="res://scenes/ball1v1.gd" id="4_m2ymn"]
[ext_resource type="Texture2D" uid="uid://c8tdrf8l8340d" path="res://assets/images/Ball.png" id="6_m8uwq"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="6_t5lee"]
[ext_resource type="FontFile" uid="uid://c1xbiljmbigao" path="res://assets/Godofthunder-0WO1P.ttf" id="6_tt21s"]
[ext_resource type="PackedScene" uid="uid://bdreilmw8kfe4" path="res://ui/pause_menu.tscn" id="7_hfinv"]
[ext_resource type="AudioStream" uid="uid://b7f6wwrutwfbs" path="res://assets/audio/269718__michorvath__ping-pong-ball-hit.mp3" id="8_xsq3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vks4v"]
size = Vector2(20, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_841kf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05tcc"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hrul"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i124"]
size = Vector2(64, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_m1q0p")
centered = false
script = ExtResource("2_ov5sp")

[node name="Player1" type="StaticBody2D" parent="."]
position = Vector2(147, 360)
script = ExtResource("3_amex5")

[node name="ColorRect" type="ColorRect" parent="Player1"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(0.486275, 1, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_vks4v")

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(1092, 360)

[node name="ColorRect" type="ColorRect" parent="Player2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(0.486275, 0.101961, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_vks4v")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
collision_mask = 3
script = ExtResource("4_m2ymn")

[node name="ColorRect" type="Sprite2D" parent="Ball"]
texture = ExtResource("6_m8uwq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_841kf")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(615, 53)
shape = SubResource("RectangleShape2D_05tcc")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(627, 660)
shape = SubResource("RectangleShape2D_1hrul")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(58, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1220, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 504.0
offset_top = 13.0
offset_right = 554.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("6_tt21s")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 721.0
offset_top = 14.0
offset_right = 771.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6_tt21s")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPULabel" type="Label" parent="Hud"]
offset_left = 930.0
offset_top = 14.0
offset_right = 1130.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6_t5lee")
theme_override_font_sizes/font_size = 27
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="Hud"]
offset_left = 167.0
offset_top = 14.0
offset_right = 367.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6_t5lee")
theme_override_font_sizes/font_size = 27
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="max_score" type="Label" parent="Hud"]
offset_right = 40.0
offset_bottom = 23.0

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("7_hfinv")]
offset_left = 14.0
offset_top = 37.0
offset_right = -626.0
offset_bottom = 37.0

[node name="sfx_hitpaddle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_xsq3o")
volume_db = 7.0

[node name="sfx_bf" type="AudioStreamPlayer2D" parent="."]
position = Vector2(617, 146)
volume_db = -7.0
autoplay = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
